--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </div>
 
         <h2>Featured Products</h2>
-        <div class="product" data-name="Laptop" data-code="LP001">
-            <h3>Product 1: Laptop</h3>
-            <p>This is a high-performance laptop with the latest processor and graphics card.</p>
-            <a class="affiliate-link" href="https://www.example.com/affiliate-link-1" target="_blank">Buy</a>
+        <div class="product" data-name="GT3 Pro Smart Watch" data-code="001">
+            <h3>Product 1: GT3 Pro Smart Watch</h3>
+            <p>GT3 Pro Smart Watch Men Women AMOLED 420*420 HD Screen Heart Rate Bluetooth Calls Voice Assistant Sports Fitness SmartWatch 2024</p>
+            <a class="affiliate-link" href="https://s.click.aliexpress.com/e/_DmdoDed" target="_blank">Buy</a>
         </div>
         <div class="product" data-name="Smartphone" data-code="SP001">
             <h3>Product 2: Smartphone</h3>
@@ -40,3 +40,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
