--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p>GT3 Pro Smart Watch Men Women AMOLED 420*420 HD Screen Heart Rate Bluetooth Calls Voice Assistant Sports Fitness SmartWatch 2024</p>
             <a class="affiliate-link" href="https://s.click.aliexpress.com/e/_DmdoDed" target="_blank">Buy</a>
         </div>
-        <div class="product" data-name="Smartphone" data-code="SP001">
+        <div class="product" data-name="Smartphone" data-code="002">
             <h3>Product 2: Smartphone</h3>
             <p>A top-of-the-line smartphone with a stunning display and advanced camera features.</p>
             <a class="affiliate-link" href="https://www.example.com/affiliate-link-2" target="_blank">Buy</a>
